<resources>
    <string name="app_name">钱小庄</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_input_mobile_number">请输入您的登录手机号</string>
    <string name="please_input_password">请输入您的登录密码</string>
    <string name="check_code_login">验证码登录</string>
    <string name="register_immediately_one">，立即 注册</string>
    <string name="confirm_the_login">确认登录</string>
    <string name="confirm_the_register">确认注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
    <string name="please_set_login_password">请设置6~16位登录密码</string>
    <string name="no_date">-- 暂无记录 --</string>
    <string name="welcome_to_qianxiaozhuang">欢迎来到钱小庄</string>
    <string name="please_input_check_code">请输入验证码</string>
    <string name="password_error">密码错误</string>
    <string name="loan">借款</string>
    <string name="mine">我的</string>
    <string name="maximum_credit_amount">最高可借额度</string>
    <string name="login_find_surprise">登录发现惊喜额度</string>
    <string name="rapid_application">极速申请</string>
    <string name="high_quota">额度高</string>
    <string name="security">安全保障</string>
    <string name="lending_fast">放款快</string>
    <string name="no_services_are_provided_to_students">不向学生提供服务</string>
    <string name="emergency_contact">紧急联系人</string>
    <string name="please_select_relationship">请选择亲属关系</string>
    <string name="contact_mobile_is_not_null">联系人手机号码不能为空</string>
    <string name="please_select_social_relationship">请选择社会关系</string>
    <string name="contact_mobile_must_be_different">联系人手机号码不能一致</string>
    <string name="make_sure_the_phone_function_is_available">没有相关的应用程序处理此操作,请确保电话功能可用</string>
    <string name="immediate_family_contact">直系亲属联系人</string>
    <string name="other_contacts">其它联系人</string>
    <string name="phone_number">(常联系的真实号码有助于通过审核)</string>
    <string name="my_relationship">与本人的关系</string>
    <string name="please_input_real_name">请输入他的真实姓名</string>
    <string name="please_input_contacts">请输入他的联系方式</string>
    <string name="contact_way">联系方式</string>
    <string name="mobile_phone_numbers_contacts">联系人手机号码</string>
    <string name="please_select">请选择</string>
    <string name="phone">联系电话</string>
    <string name="social_relations">社会关系</string>
    <string name="save">保存</string>
    <string name="get_again">再次获取</string>
    <string name="send_fail">发送失败</string>
    <string name="send_code_success">发送成功</string>
    <string name="get_check_code">获取验证码</string>
    <string name="order_list">订单列表</string>
    <string name="order_no">订单号</string>
    <string name="drawings">提款</string>
    <string name="my_report">我的报告</string>
    <string name="no_order_list">暂无订单</string>
    <string name="baidu">百度</string>
    <string name="the_highest">最高额度（元）</string>
    <string name="success_rate">成功率</string>
    <string name="ignore_the_black_and_white">无视黑白</string>
    <string name="rapid_exhausting">急速下款</string>
    <string name="go_apply">去申请</string>
    <string name="upload_picture">上传图片</string>
    <string name="quick_refund">急速退款</string>
    <string name="bank_list">银行卡列表</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="please_complete_your_information">请完善您的资料</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="refinance">您有正在进行中的订单，如需查询可在订单列表中查看。10天后可重新申请借款。</string>
    <string name="view_order_list">查看订单</string>
    <string name="result_check">结果查询</string>
    <string name="refunded">已退款</string>
    <string name="it_is_expected_to_arrive_within_one_working_day">预计1个工作日内到账</string>
    <string name="refund_under_review">退款审核中</string>
    <string name="the_refund_is_expected_to_be_completed_within_1_3_working_days">预计1-3个工作日完成退款</string>
    <string name="audit_failed">审核未通过</string>
    <string name="yuan">元</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
