<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_concer_white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/warm_prompt"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/refinance"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_f0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_30a3ff"
                android:textSize="@dimen/sp_16" />

            <View
                android:id="@+id/view_middle"
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/color_f0f0f0" />

            <TextView
                android:id="@+id/txt_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/color_30a3ff"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>