<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.xinfu.qianxiaozhuang.widget.CommonTitleBar
        android:id="@+id/titlebar_withdraw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_f3f3f3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_46"
        android:layout_marginBottom="@dimen/dp_59"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/icon_qianxiaozhuan_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/welcome_to_qianxiaozhuang"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_5"
                android:gravity="bottom"
                android:text="@string/register_immediately_one"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_login_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:orientation="vertical"
        android:visibility="visible">

        <com.xinfu.qianxiaozhuang.widget.EditTextWithClear
            android:id="@+id/et_input_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/color_030303"
            android:textColorHint="@color/color_33030303"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_f3f3f3" />

        <com.xinfu.qianxiaozhuang.widget.EditTextWithClear
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/color_030303"
            android:textColorHint="@color/color_33030303"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_f3f3f3" />

        <TextView
            android:id="@+id/txt_password_error"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:text="@string/password_error"
            android:textColor="@color/color_ff3f3f"
            android:textSize="@dimen/sp_11"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:orientation="vertical"
        android:visibility="gone">

        <com.xinfu.qianxiaozhuang.widget.EditTextWithClear
            android:id="@+id/et_input_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_49"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/color_030303"
            android:textColorHint="@color/color_33030303"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_f3f3f3" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.xinfu.qianxiaozhuang.widget.EditTextWithClear
                    android:id="@+id/et_check_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_49"
                    android:layout_weight="2"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_check_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingRight="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/color_030303"
                    android:textColorHint="@color/color_33030303"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@color/color_f3f3f3" />

                <TextView
                    android:id="@+id/txt_get_check_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/get_check_code"
                    android:textColor="@color/color_f98715"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/color_f3f3f3" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/drawable_concer_login_silver"
        android:gravity="center"
        android:text="@string/confirm_the_login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txt_check_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/check_code_login"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dp_12" />


</LinearLayout>