<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_105"
    android:layout_marginLeft="@dimen/dp_13"
    android:layout_marginRight="@dimen/dp_13"
    android:background="@drawable/drawable_concer_white"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6.5">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_kefu" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baidu"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_highest"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/success_rate"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5000"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/txt_probability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="92%"
                android:textColor="@color/color_FFA100"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_description_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_rectangle_gray_two"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_2"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/ignore_the_black_and_white"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_10"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_description_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/drawable_rectangle_gray_two"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_2"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/rapid_exhausting"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_10"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_description_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/drawable_rectangle_gray_two"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_2"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/rapid_exhausting"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_10"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.2">

        <TextView
            android:id="@+id/txt_go_apply"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_28"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/drawable_concer_apply_orange"
            android:gravity="center"
            android:text="@string/go_apply"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />

    </RelativeLayout>


</LinearLayout>