<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_top"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_73"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/txt_order_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/order_no"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_centerVertical="true"
                android:background="@drawable/drawable_gray_circle"
                android:gravity="center"
                android:text="@string/order_no"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/txt_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/drawable_arrow_blue"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/drawings"
                android:textColor="@color/color_4CADFA"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_d9d9d9" />

    <TextView
        android:id="@+id/txt_report_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/my_report"
        android:textColor="@color/color_FDBC4D"
        android:textSize="@dimen/sp_11" />

</LinearLayout>